--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
             const apiUrl = `https://www.arcgis.com/sharing/rest/content/items/${itemId}?f=json`;
 
             try {
-                // Fetch data using a public CORS proxy
-                const response = await fetch(`https://corsproxy.io/?${encodeURIComponent(apiUrl)}`);
+                // Alternative CORS proxy: Use 'https://api.allorigins.win' (a more stable option)
+                const response = await fetch(`https://api.allorigins.win/get?url=${encodeURIComponent(apiUrl)}`);
                 const data = await response.json();
+                const parsedData = JSON.parse(data.contents); // Extract JSON from proxy response
 
-                if (data.numViews !== undefined) {
-                    document.getElementById("viewCount").innerText = data.numViews.toLocaleString(); // Adds commas for readability
+                if (parsedData.numViews !== undefined) {
+                    document.getElementById("viewCount").innerText = parsedData.numViews.toLocaleString(); // Adds commas
                 } else {
                     document.getElementById("viewCount").innerText = "View count unavailable";
                 }
